--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     "description": "",
     "autoload": {
         "psr-4": {
-            "Hyperf\\Hykafka\\": "src/"
+            "Hanslife\\Hykafka\\": "src/"
         }
     },
     "autoload-dev": {
@@ -48,7 +48,7 @@
     },
     "extra": {
         "hyperf": {
-            "config": "Hyperf\\Hykafka\\ConfigProvider"
+            "config": "Hanslife\\Hykafka\\ConfigProvider"
         }
     }
 }
